--- a/wwr/style/site-plan-rafting.css
+++ b/wwr/style/site-plan-rafting.css
@@ -5,10 +5,10 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #f8f9fa   ;
-  --secondary-color: #212529 ;
-  --accent1-color: #ced4da;
-  --accent2-color: #6c757d;
+  --primary-color: #396E94   ;
+  --secondary-color: #E7C24F ;
+  --accent1-color: #A42212;
+  --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "IM Fell French Canon";
