--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -20,7 +20,7 @@ Fonts are separated by a & */
   --paragraph-color-on-white: #212529; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
   --paragraph-background-color: #212529  ;
-  --nav-link-color: black;
+  --nav-link-color: white;
   --nav-background-color: #a4161a;
   --nav-hover-link-color: white;
   --nav-hover-background-color: #212529;
