--- a/portal.css
+++ b/portal.css
@@ -19,9 +19,9 @@ h1{
     text-align: center;
 }
 img{
-    width: 100%;
+    width: 60%;
     display: block;
-    margin: auto;
+    margin: 0 auto;
 }
 p{
     /* text-align: center; */
