--- a/wwr/ice/portal.css
+++ b/wwr/ice/portal.css
@@ -18,6 +18,9 @@ h1{
     font-size: 1.5em;
     text-align: center;
 }
+h2{
+    justify-content: left;
+}
 img{
     width: 30%;
     display: block;
