--- a/wwr/ice/portal.css
+++ b/wwr/ice/portal.css
@@ -18,8 +18,8 @@ h1{
     font-size: 1.5em;
     text-align: center;
 }
-p1{
-    justify-content: left;
+h2{
+    font-size: 0.5em;
     text-align: left;
 }
 img{
