--- a/wwr/ice/portal.css
+++ b/wwr/ice/portal.css
@@ -19,8 +19,9 @@ h1{
     text-align: center;
 }
 h2{
-    font-size: 0.5em;
+    font-size: 1em;
     text-align: left;
+    justify-content: left;
 }
 img{
     width: 30%;
