--- a/wwr/ice/portal.css
+++ b/wwr/ice/portal.css
@@ -18,6 +18,10 @@ h1{
     font-size: 1.5em;
     text-align: center;
 }
+ul{
+    font-size: 1em;
+    text-align: left;
+}
 img{
     width: 30%;
     display: block;
