--- a/wwr/ice/portal.css
+++ b/wwr/ice/portal.css
@@ -1,10 +1,18 @@
 a{
-    background-color: pink;
-    color: rgb(71,69, 69);
+    color:(71,69, 69);
     text-decoration: none;
     padding: 10px;
     margin: 5px;
     text-align: center;
+}
+h1{
+    text-decoration-color: white;
+}
+body{
+    background-color: pink;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 a:hover{
     background-color: darkgray;
@@ -20,11 +28,10 @@ h1{
 }
 ol{
     font-size: 1em;
-    text-align: center;
     justify-content: center;
 }
 img{
-    width: 30%;
+    width: 40%;
     display: block;
     margin: 0 auto;
 }
@@ -41,3 +48,7 @@ footer p{
     width: 100%;
     text-align: center;
     color: rgb(71,69, 69);
+}
+.container{
+    max-width: 500px;
+}
