--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,37 +1,75 @@
+@import url('https://fonts.googleapis.com/css2?family=Cookie&family=Montserrat&family=MuseoModerno:wght@500;600&family=Poppins&display=swap');
 a{
     max-width: 1600px;
     margin:auto;
     text-align: center;
+    text-decoration: none;
 }
 #content{
     max-width: 1600px;
     margin: 0 auto;
 }
 .home-title{
+    font-family: Montserrat;
     font-size: 2em;
     margin-top: 10px;
 }
+.msg{
+    background-color: #6f7364;
+    line-height: 1.5em;
+    padding: 35px;
+}
+.msg p{
+    padding-bottom: 15px;
+}  
 #background{
     height: 725px;
 }
 body {
-    background-color: #fcfbfb; 
+    background-color: #fcfbfb;
+    font-family: Montserrat, Poppins, MuseoModern;
+    font-size: 22px;
+    margin: 0;
+    padding: 0; 
+}
+h2{
+    margin: 0;
 }
 header {
     background-color:rgba(17, 21, 14, 0.7);
+}
+#logo link{
+    padding-top: 5px;
 }
 nav a {
     text-align: center;
     color: #fcfbfb;
     text-decoration: none;
+    padding: 35px;
 }
 nav a:hover {
     background-color: black;
 }
+footer{
+    padding: 25px 50px;
+    margin-top: 100px;
+}
+footer .social img{
+    padding-top: 15px;
+}
 footer p{
     font-size: 1.2em;
 }
-.icon{
+.book, .join {
+    padding: 15px 30px;
+    margin-top: 50px;
+    background-color: #d9c2a3;
+    color: black;
+    text-decoration: none;
+    font-size: 18px;
+    border-radius: 5px;
+}
+.icon, .logo{
     width: 80px;
 }
 footer p a:hover{
@@ -45,10 +83,17 @@ footer p a:hover{
 }
 .home-grid.card-img{
     display: block;
-    text-align: centerq;
+    text-align: center;
+    border: 10px solid #d9c2a3;
+}
+.rivers-card, .camping-card, .rapids-card{
+    margin: 100px 0;
 }
 main section{
     text-align: center;
+}
+main section img{
+    box-sizing: border-box;
 }
 .button-box{
     text-align: center;
