--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -53,6 +53,7 @@ nav a:hover {
 footer{
     padding: 25px 50px;
     margin-top: 100px;
+    background-color: #6f7364;
 }
 footer .social img{
     padding-top: 15px;
@@ -84,6 +85,9 @@ footer p a:hover{
 .home-grid.card-img{
     display: block;
     text-align: center;
+    border: 10px solid #d9c2a3;
+}
+.card-img{
     border: 10px solid #d9c2a3;
 }
 .rivers-card, .camping-card, .rapids-card{
