--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -90,7 +90,7 @@ footer p a:hover{
 .card-img{
     border: 10px solid #d9c2a3;
 }
-.rivers-card, .camping-card, .rapids-card{
+.rivers-card, .camping-card, .rapids-card, .mountains-card{
     margin: 100px 0;
 }
 main section{
@@ -101,4 +101,10 @@ main section img{
 }
 .button-box{
     text-align: center;
+}
+#mountain-img{
+    display: flex;
+    width: 80%;
+    padding: 25px 50px;
+    margin: 50px;
 }
