--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -18,12 +18,17 @@ a{
     background-color: #6f7364;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 .msg p{
     padding-bottom: 15px;
 }  
 #background{
     height: 725px;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 body {
     background-color: #fcfbfb;
@@ -36,10 +41,18 @@ h2{
     margin: 0;
 }
 header {
+    display: grid;
+    grid-template-columns: 150px auto;
     background-color:rgba(17, 21, 14, 0.7);
 }
 #logo link{
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+nav{
+    display: flex;
+    justify-content: space-around;
 }
 nav a {
     text-align: center;
@@ -54,6 +67,9 @@ footer{
     padding: 25px 50px;
     margin-top: 100px;
     background-color: #6f7364;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer .social img{
     padding-top: 15px;
@@ -76,8 +92,21 @@ footer p{
 footer p a:hover{
     text-decoration: underline;
 }
+#hero{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: 100px;
+}
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
 #hero-msg h1, #hero-msg h4{
     text-align: center;
+}
+#hero-msg h4{
+    color: white;
 }
 #hero-img{
     width: 100%;
@@ -89,9 +118,33 @@ footer p a:hover{
 }
 .card-img{
     border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover{
+    opacity: .6;
+    transform: scale(1.1);
 }
 .rivers-card, .camping-card, .rapids-card, .mountains-card{
     margin: 100px 0;
+}
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+} 
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+} 
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+.mountains{
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 main section{
     text-align: center;
@@ -101,4 +154,49 @@ main section img{
 }
 .button-box{
     text-align: center;
+}
+.home-grid{
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
