--- a/sdezyns/styles/site-plan.css
+++ b/sdezyns/styles/site-plan.css
@@ -1,7 +1,7 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&family=Source+Sans+3:wght@400;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amita:wght@700&family=Poppins&family=Roboto&display=swap');
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: #07020d   ;
@@ -10,8 +10,8 @@ Fonts are separated by a | */
   --accent2-color: #48b8d0;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Source+Sans+3:wght@900";
-  --paragraph-font: Source+Sans+3:wght@400, Poppins, Roboto;
+  --heading-font: "Amita:wght@700";
+  --paragraph-font: Poppins, Roboto;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #396E94;  /* headlines on a white background */ 
