--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -174,6 +174,89 @@ main section img{
     display: grid;
     grid-template-columns: repeat(10, 1fr);
 }
+
+/* rivers css */
+a{
+    max-width: 1600px;
+    margin:auto;
+    text-align: center;
+    text-decoration: none;
+}
+#content{
+    max-width: 1600px;
+    margin: 0 auto;
+}
+.home-grid{
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+#hero{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg h1, #hero-msg h4{
+    text-align: center;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    color: aliceblue;
+}
+#hero-msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+#hero-msg h4{
+    color: white;
+}    
+#hero-img{
+    width: 100%;
+}
+.home-grid.card-img{
+    display: block;
+    text-align: center;
+    border: 10px solid #d9c2a3;
+}
+.card-img{
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img, .mountains{
+    width: 100%;
+}
+.card-img:hover{
+    opacity: .6;
+    transform: scale(1.1);
+}
+.salmon-river, .Gray-Canyon, .Grand-Canyon{
+    margin: 200px 0;
+}
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+} 
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+} 
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+.mountains{
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
