--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -97,7 +97,7 @@ footer p a:hover{
     text-decoration: underline;
 }
 #hero{
-    display: grid;
+    display: flex;
     grid-template-columns: 1fr 3fr 1fr;
     margin-top: -100px;
 }
@@ -217,17 +217,109 @@ nav a:hover {
     color: #d9c2a3;
 }
 .home-grid{
-    display: flex;
+    display: grid;
     grid-template-columns: repeat(10, 1fr);
 }
 #hero-img{
     width: 100%;
+}#hero{
+    display: flex;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg h1, #hero-msg h4{
+    text-align: center;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    color: aliceblue;
+}
+#hero-msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+#hero-msg h4{
+    color: white;
 }
 .home-grid.card-img{
-    display: flex;
+    display: block;
     text-align: center;
     border: 10px solid #d9c2a3;
 }
+.rivers-1, .rivers-2, .rivers-3{
+    margin: 200px 0;
+}
+.rivers-1{
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+    border: 10px solid #d9c2a3;
+}
+.rivers-2{
+    width: 100%;
+    grid-column: 5/10;
+    grid-row: 8/9;
+    box-shadow: 5px 5px 10px #6f7364;
+    border: 10px solid #d9c2a3;
+}
+.rivers-3{
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 9/20;
+    box-shadow: 5px 5px 10px #6f7364;
+    border: 10px solid #d9c2a3;
+}
+.msg-1{
+    background-color: #6f7364;
+    line-height: 1.5em;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+    color: white;
+}
+.msg p{
+    padding-bottom: 15px;
+}
+.msg-2{
+    background-color: #6f7364;
+    line-height: 1.5em;
+    padding: 35px;
+    grid-column: 2/6;
+    grid-row: 8/10;
+    box-shadow: 5px 5px 10px #6f7364;
+    color: white;
+}
+.msg p{
+    padding-bottom: 15px;
+}
+.msg-3{
+    background-color: #6f7364;
+    line-height: 1.5em;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 12/18;
+    box-shadow: 5px 5px 10px #6f7364;
+    color: white;
+}
+.msg p{
+    padding-bottom: 15px;
+}
+.Explore{
+    padding: 15px 30px;
+    margin-top: 50px;
+    background-color: #d9c2a3;
+    color: black;
+    text-decoration: none;
+    font-size: 18px;
+    border-radius: 5px;
+}   
 
 
 
