--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,20 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Cookie&family=Montserrat&family=MuseoModerno:wght@500;600&family=Poppins&display=swap');
-a{
+
+a {
     max-width: 1600px;
-    margin:auto;
+    margin: auto;
     text-align: center;
     text-decoration: none;
 }
-#content{
+#content {
     max-width: 1600px;
     margin: 0 auto;
 }
-.home-title{
+.home-title {
     font-family: Montserrat, MuseoModerno, Poppins;
     font-size: 2em;
     margin-top: 10px;
 }
-.msg{
+.msg {
     background-color: #6f7364;
     line-height: 1.5em;
     padding: 35px;
@@ -23,40 +24,40 @@ a{
     box-shadow: 5px 5px 10px #6f7364;
     color: white;
 }
-.msg p{
+.msg p {
     padding-bottom: 15px;
-}  
-#background{
+}
+#background {
     height: 725px;
     grid-column: 1/11;
     grid-row: 4/9;
     background-color: #d9c2a3;
 }
-body{
+body {
     background-color: #fcfbfb;
     font-family: Montserrat, Poppins, MuseoModern;
     font-size: 22px;
     margin: 0;
-    padding: 0; 
+    padding: 0;
 }
-h2{
+h2 {
     margin: 0;
 }
-header{
+header {
     display: grid;
     grid-template-columns: 150px auto;
-    background-color:rgba(20, 30, 13, 0.7);
+    background-color: rgba(20, 30, 13, 0.7);
 }
-#logo_link{
+#logo_link {
     padding-top: 5px;
     justify-self: center;
     align-self: center;
 }
-nav{
+nav {
     display: flex;
     justify-content: space-around;
 }
-nav a{
+nav a {
     text-align: center;
     color: #fcfbfb;
     text-decoration: none;
@@ -66,7 +67,7 @@ nav a:hover {
     background-color: black;
     color: #d9c2a3;
 }
-footer{
+footer {
     padding: 25px 50px;
     margin-top: 200px;
     background-color: #6f7364;
@@ -75,10 +76,10 @@ footer{
     align-items: center;
     color: #d9c2a3;
 }
-footer .social img{
+footer .social img {
     padding-top: 15px;
 }
-footer p{
+footer p {
     font-size: 1.2em;
 }
 .book, .join {
@@ -90,123 +91,133 @@ footer p{
     font-size: 18px;
     border-radius: 5px;
 }
-.icon, .logo{
+.icon, .logo {
     width: 80px;
 }
-footer p a:hover{
+footer p a:hover {
     text-decoration: underline;
 }
-#hero{
-    display: flex;
+#hero {
+    display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     margin-top: -100px;
 }
-#hero-box{
+#hero-box {
     grid-column: 1/4;
     grid-row: 1/3;
     z-index: -1;
 }
-#hero-msg h1, #hero-msg h4{
+#hero-msg h1, #hero-msg h4 {
     text-align: center;
     grid-column: 2/3;
     grid-row: 1/2;
     color: aliceblue;
 }
-#hero-msg{
+#hero-msg h4{
+    text-align: center;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    color: aliceblue;
+}
+#hero-msg {
     grid-column: 2/3;
     grid-row: 1/2;
     margin-top: 100px;
 }
-#hero-msg h4{
+#hero-msg h4 {
     color: white;
+    margin-top: -200px;
 }
-#hero-img{
+#hero-img {
     width: 100%;
 }
-.home-grid.card-img{
+.home-grid.card-img {
     display: block;
     text-align: center;
     border: 10px solid #d9c2a3;
 }
-.card-img{
+.card-img {
     border: 10px solid #d9c2a3;
     transition: transform .5s;
     box-shadow: 5px 5px 10px #6f7364;
 }
-.card-img, .mountains{
+.card-img, .mountains {
     width: 100%;
 }
-.card-img:hover{
+.card-img:hover {
     opacity: .6;
     transform: scale(1.1);
 }
-.rivers-card, .camping-card, .rapids-card, .mountains-card{
+.rivers-card, .camping-card, .rapids-card, .mountains-card {
     margin: 200px 0;
 }
-.rivers-card{
+.rivers-card {
     grid-column: 2/4;
     grid-row: 2/3;
-} 
-.camping-card{
+}
+.camping-card {
     grid-column: 5/7;
     grid-row: 2/3;
-} 
+}
 .rapids-card {
     grid-column: 8/10;
     grid-row: 2/3;
 }
-.mountains{
+.mountains {
     width: 100%;
     grid-column: 2/7;
     grid-row: 5/8;
     box-shadow: 5px 5px 10px #6f7364;
 }
-main section{
+main section {
     text-align: center;
 }
-main section img{
+main section img {
     box-sizing: border-box;
 }
-.button-box{
+.button-box {
     text-align: center;
 }
-.home-grid{
+.home-grid {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
 }
 
 /* rivers css */
-a{
+a {
     max-width: 1600px;
-    margin:auto;
+    margin: auto;
     text-align: center;
     text-decoration: none;
 }
-#content{
+#content {
     max-width: 1600px;
     margin: 0 auto;
 }
-main section{
+main section {
     text-align: center;
 }
-main section img{
+main section img {
     box-sizing: border-box;
 }
-header{
+header {
     display: grid;
     grid-template-columns: 150px auto;
-    background-color:rgba(20, 30, 13, 0.7);
+    background-color: rgba(20, 30, 13, 0.7);
+    z-index: 3;
 }
-#logo_link{
+#logo_link {
     padding-top: 5px;
     justify-self: center;
     align-self: center;
+    z-index: 3;
 }
-nav{
+nav {
     display: flex;
     justify-content: space-around;
+    z-index: 3;
 }
-nav a{
+nav a {
     text-align: center;
     color: #fcfbfb;
     text-decoration: none;
@@ -216,102 +227,124 @@ nav a:hover {
     background-color: black;
     color: #d9c2a3;
 }
-.home-grid{
+.home-grid {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
 }
-#hero-img{
+#hero-img {
     width: 100%;
-}#hero{
-    display: flex;
+    grid-column: 1/4;
+    grid-row: 1/2;
+}
+#hero {
+    display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     margin-top: -100px;
+    color: black 50%;
 }
-#hero-box{
+#hero-box {
     grid-column: 1/4;
     grid-row: 1/3;
     z-index: -1;
 }
-#hero-msg h1, #hero-msg h4{
+#hero-msg h4 {
     text-align: center;
     grid-column: 2/3;
     grid-row: 1/2;
     color: aliceblue;
+    z-index: 2;
 }
-#hero-msg{
+#hero-msg {
     grid-column: 2/3;
     grid-row: 1/2;
     margin-top: 100px;
+    padding-top: 100px;
 }
-#hero-msg h4{
+#hero-msg h4 {
     color: white;
 }
-.home-grid.card-img{
+.home-grid.card-img {
     display: block;
     text-align: center;
     border: 10px solid #d9c2a3;
 }
-.rivers-1, .rivers-2, .rivers-3{
-    margin: 200px 0;
+.home-title {
+    font-family: Montserrat, MuseoModerno, Poppins;
+    font-size: 10em;
+    margin-top: 100px;
+    text-shadow: 5px 0px 20px black; 50%;
+    
 }
-.rivers-1{
+.river-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    align-items: center;
+}
+.rivers-1,.rivers-2,.rivers-3 {
+    margin: 100px 0;
+    border-radius: 30px;
+}
+.rivers-1 {
     width: 100%;
-    grid-column: 2/7;
-    grid-row: 5/8;
+    grid-column: 2/8;
+    grid-row: 1/2;
     box-shadow: 5px 5px 10px #6f7364;
     border: 10px solid #d9c2a3;
 }
-.rivers-2{
+.rivers-2 {
     width: 100%;
-    grid-column: 5/10;
-    grid-row: 8/9;
+    grid-column: 4/10;
+    grid-row: 2/3;
     box-shadow: 5px 5px 10px #6f7364;
     border: 10px solid #d9c2a3;
 }
-.rivers-3{
+.rivers-3 {
     width: 100%;
-    grid-column: 2/7;
-    grid-row: 9/20;
+    grid-column: 2/8;
+    grid-row: 3/4;
     box-shadow: 5px 5px 10px #6f7364;
     border: 10px solid #d9c2a3;
 }
-.msg-1{
+.msg-1 {
     background-color: #6f7364;
     line-height: 1.5em;
     padding: 35px;
     grid-column: 6/10;
-    grid-row: 6/7;
+    grid-row: 1/2;
     box-shadow: 5px 5px 10px #6f7364;
     color: white;
+    border-radius: 10px;
 }
-.msg p{
+.msg p {
     padding-bottom: 15px;
 }
-.msg-2{
+.msg-2 {
     background-color: #6f7364;
     line-height: 1.5em;
     padding: 35px;
     grid-column: 2/6;
-    grid-row: 8/10;
+    grid-row: 2/3;
     box-shadow: 5px 5px 10px #6f7364;
     color: white;
+    border-radius: 10px;
 }
-.msg p{
+.msg p {
     padding-bottom: 15px;
 }
-.msg-3{
+.msg-3 {
     background-color: #6f7364;
     line-height: 1.5em;
     padding: 35px;
     grid-column: 6/10;
-    grid-row: 12/18;
+    grid-row: 3/4;
     box-shadow: 5px 5px 10px #6f7364;
     color: white;
+    border-radius: 10px;
 }
-.msg p{
+.msg p {
     padding-bottom: 15px;
 }
-.Explore{
+.Explore {
     padding: 15px 30px;
     margin-top: 50px;
     background-color: #d9c2a3;
@@ -319,48 +352,64 @@ nav a:hover {
     text-decoration: none;
     font-size: 18px;
     border-radius: 5px;
-}   
+}
 
 
 
 
 @media screen and (max-width: 900px) {
-    #hero, .home-grid {
+
+    #hero,
+    .home-grid {
         display: block;
         height: auto;
     }
-    nav, footer {
+
+    nav,
+    footer {
         flex-direction: column;
     }
+
     nav a {
         display: block;
         padding: 15px;
     }
+
     #hero {
         margin-top: 0;
     }
+
     #hero-msg {
         margin-top: 0;
     }
+
     #hero-msg h4 {
         display: none;
     }
+
     .home-title {
         font-size: 25px;
         color: #6f7364;
     }
-    .rivers-card, .camping-card, .rapids-card { 
+
+    .rivers-card,
+    .camping-card,
+    .rapids-card {
         margin: 50px auto;
         width: 60%;
     }
+
     #background {
         display: none;
     }
-    .mountains, .msg {
+
+    .mountains,
+    .msg {
         width: 80%;
         display: block;
         margin: 0 auto;
     }
+
     footer {
         margin-top: 25px;
     }
