--- a/sdezyns/sdesignz.css
+++ b/sdezyns/sdesignz.css
@@ -57,6 +57,7 @@ nav a:hover {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     margin-top: -100px;
+    align-items: center;
 }
 #hero-box {
     grid-column: 1/4;
@@ -123,6 +124,8 @@ footer p {
     align-items: center;
     justify-content:space-between;
     justify-items: flex-start;
-    margin-top: 200px;
     margin-right: 20px;
+}
+.social img{
+    margin-top: 50px;
 }
