--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -113,7 +113,7 @@ footer p a:hover {
     grid-row: 1/2;
     color: aliceblue;
 }
-#hero-msg h4{
+#hero-msg h4, #contact-msg h4{
     text-align: center;
     grid-column: 2/3;
     grid-row: 1/2;
@@ -124,7 +124,7 @@ footer p a:hover {
     grid-row: 1/2;
     margin-top: 100px;
 }
-#hero-msg h4 {
+#hero-msg h4, #contact-msg h4 {
     color: white;
     margin-top: -200px;
 }
@@ -247,7 +247,7 @@ nav a:hover {
     grid-row: 1/3;
     z-index: -1;
 }
-#hero-msg h4 {
+#hero-msg h4, #contact-msg h4 {
     text-align: center;
     grid-column: 2/3;
     grid-row: 1/2;
@@ -260,7 +260,7 @@ nav a:hover {
     margin-top: 100px;
     padding-top: 100px;
 }
-#hero-msg h4 {
+#hero-msg h4, #contact-msg h4 {
     color: white;
 }
 .home-grid.card-img {
@@ -446,6 +446,18 @@ button {
 }
 .moveDown {
     margin-top: 3em;
+}
+.contact {
+    font-family: Montserrat, MuseoModerno, Poppins;
+    font-size: 8em;
+    text-shadow: 5px 0px 20px black; 50%;
+    
+}
+#contact-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 0;
+    padding-top: 50px;
 }
 
 
