--- a/sdezyns/sdesignz.css
+++ b/sdezyns/sdesignz.css
@@ -63,7 +63,8 @@ nav a:hover {
     grid-column: 1/4;
     grid-row: 1/3;
     z-index: -1;
-}#hero-img {
+}
+#hero-img {
     width: 100%;
 }
 .home-title {
@@ -128,4 +129,41 @@ footer p {
 }
 .social img{
     margin-top: 50px;
+}
+
+/* logos css */
+.home-grid{
+    display: grid;
+    text-align: center;
+    grid-template-columns: repeat(10, 1fr);
+}
+.logos-grid{
+    display: grid;
+    gap: 1.5em;
+    grid-template-columns: repeat(10, 1fr);
+    justify-items: center;
+    justify-content:space-around;
+}
+.third-1,.third-2,.third-3,.third-4 {
+    margin: 0px;
+}
+.third-1 {
+    width: 100%;
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+.third-2 {
+    width: 100%;
+    grid-column: 4/5;
+    grid-row: 1/2;
+}
+.third-3 {
+    width: 100%;
+    grid-column: 6/7;
+    grid-row: 1/2;
+}
+.third-4 {
+    width: 100%;
+    grid-column: 8/9;
+    grid-row: 1/2;
 }
