--- a/sdezyns/sdesignz.css
+++ b/sdezyns/sdesignz.css
@@ -195,6 +195,17 @@ h3{
 .logo3{
     border-radius: 10px;
 }
+#logo4-section{
+    display: flex;
+    justify-content: space-between;
+    align-self: center;
+    align-content: center;
+    margin: 20px 10px;
+}
+.logo4{
+    border-radius: 10px;
+}
+
 
 
 
