--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -14,6 +14,7 @@ a {
     font-family: Montserrat, MuseoModerno, Poppins;
     font-size: 2em;
     margin-top: 10px;
+    text-shadow: 5px 0px 20px black 50px; 
 }
 .msg {
     background-color: #6f7364;
@@ -52,6 +53,10 @@ header {
     padding-top: 5px;
     justify-self: center;
     align-self: center;
+    border-radius: 10px;
+}
+.logo{
+    border-radius: 60px;
 }
 nav {
     display: flex;
@@ -272,7 +277,7 @@ nav a:hover {
     font-family: Montserrat, MuseoModerno, Poppins;
     font-size: 10em;
     margin-top: 100px;
-    text-shadow: 5px 0px 20px black; 50%;   
+    text-shadow: 5px 0px 20px black 50%;   
 }
 .river-grid {
     display: grid;
