--- a/sdezyns/sdesignz.css
+++ b/sdezyns/sdesignz.css
@@ -214,19 +214,22 @@ body{
 form {
     /* Center the form on the page */
     margin: 0 auto;
+    margin-top: 150px;
     width: 450px;
     /* Form outline */
     padding: 1em;
     border: 1px solid #ccc;
-    border-radius: 1em;
+    border-radius: 10px;
   }
 ul {
     list-style: none;
     padding: 0;
     margin: 0;
+    font-family: poppins;
 }
 form li + li {
     margin-top: 1em;
+    font-family: poppins;
 }
 label {
     /* Uniform size & alignment */
@@ -240,6 +243,7 @@ input, textarea {
     /* To make sure that all text fields have the same font settings
        By default, textareas have a monospace font */
     font: 1em poppins;
+    border-radius: 5px;
   
     /* Uniform text field size */
     width: 300px;
@@ -262,13 +266,16 @@ textarea {
 }
 .button {
     /* Align buttons with the text fields */
-    padding-left: 110px; /* same size as the label elements */
+    padding-left: 100px; /* same size as the label elements */
 }
 button {
     /* This extra margin represent roughly the same space as the space
        between the labels and their text fields */
     margin-left: 0.5em;
-    padding: auto;
+    padding: 10px;
+    background-color: bisque;
+    font-family: poppins;
+    border-radius: 5px;
 }
 #feedback {
     background-color: antiquewhite;
@@ -279,7 +286,8 @@ button {
     padding: .5em;
     /* make this element invisible until we are ready for it */
     display: none;
-    text-align: center;      
+    text-align: center;
+    font-family: poppins;    
 }
 .moveDown {
     margin-top: 3em;
@@ -293,4 +301,30 @@ button {
     grid-column: 2/3;
     grid-row: 1/2;
     margin-top: 0;
+}
+.social{
+    grid-template-columns: auto;
+    padding: auto;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    margin: auto;
+}
+.social p{
+    color: bisque;
+    text-decoration: bisque;
+    font-family: poppins;
+    writing-mode: horizontal-tb;
+    margin-top: 50px;
+    margin-left: -250px;
+    text-align: left;
+    margin-bottom: 150px;
+
+}
+.social img{
+    margin: 20px 20px;
+}
+footer{
+    margin-top: 250px;
 }
