--- a/sdezyns/sdesignz.css
+++ b/sdezyns/sdesignz.css
@@ -295,7 +295,7 @@ button {
 .contact {
     font-family: Montserrat, MuseoModerno, Poppins;
     font-size: 8em;
-    text-shadow: 5px 0px 20px black 50px;
+    text-shadow:black 50px;
 }
 #contact-msg {
     grid-column: 2/3;
@@ -320,7 +320,6 @@ button {
     margin-left: -250px;
     text-align: left;
     margin-bottom: 150px;
-
 }
 .social img{
     margin: 20px 20px;
