--- a/sdezyns/sdesignz.css
+++ b/sdezyns/sdesignz.css
@@ -15,7 +15,6 @@ header {
     background-color: black;
     justify-content: flex-end;
     align-items: center;
-
 }
 #logo_link{
     padding: 0px 30px;
@@ -37,7 +36,8 @@ nav a{
     text-align: center;
     color: #fcfbfb;
     text-decoration: none;
-    padding: 35px;
+    padding: 35px 35px 35px 35px;
+    transition: all 0.25s ease;
 }
 nav a:hover {
     background-color: black;
@@ -93,6 +93,9 @@ nav a:hover {
 main section {
     text-align: center;
 }
+main section p{
+    text-align: left;
+}
 main section img {
     box-sizing: border-box;
 }
@@ -124,7 +127,19 @@ footer p {
     justify-items: flex-start;
     margin: 20px 50px;
 }
-.social img{
+.social-inline{
+    grid-column: 3/3;
+    grid-row: 1/2;
+    padding: 20px;
+    writing-mode: vertical-rl;
+    display:list-item;
+    transform: rotate(0deg);
+    align-items: center;
+    justify-content:space-between;
+    justify-items: flex-start;
+    margin: 20px 50px;
+}
+.social-inline img{
     margin: 20px 20px;
 }
 
@@ -167,6 +182,11 @@ h1{
     align-items: center;
     align-content: center;
     margin: 100PX 30px;
+}
+h3{
+    font-weight: 300;
+    font-size: 18px;
+    text-align: center;
 }
 p{
     font-size: 18px;
@@ -323,7 +343,4 @@ button {
 }
 .social img{
     margin: 20px 20px;
-}
-footer{
-    margin-top: 250px;
 }
