--- a/sdezyns/sdesignz.css
+++ b/sdezyns/sdesignz.css
@@ -28,7 +28,7 @@ header {
 nav{
     display: flex;
     justify-content: space-around;
-    padding: 0px 30px;
+    padding: 0px 20px;
     font-family: poppins;
     font-size: 18px;
 }
@@ -36,13 +36,20 @@ nav a{
     text-align: center;
     color: #fcfbfb;
     text-decoration: none;
-    padding: 35px 35px 35px 35px;
-    transition: all 0.25s ease;
+    padding: 20px;
+    margin: auto;
 }
 nav a:hover {
     background-color: black;
     color: #d9c2a3;
-    font-size: 22px;
+    font-size: 18px;
+}
+.active{
+    background-color: bisque;
+    border-radius: 10px;
+    color: #000;
+    padding: 10px 20px;
+    margin: auto;
 }
 .home-grid{
     display: block;
@@ -315,7 +322,6 @@ button {
 .contact {
     font-family: Montserrat, MuseoModerno, Poppins;
     font-size: 8em;
-    text-shadow:black 50px;
 }
 #contact-msg {
     grid-column: 2/3;
@@ -324,7 +330,7 @@ button {
 }
 .social{
     grid-template-columns: auto;
-    padding: auto;
+    padding: 10px;
     display: grid;
     align-items: center;
     justify-content: center;
